--- a/pages/sobre.html
+++ b/pages/sobre.html
@@ -4,41 +4,62 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sobre - Nay Rodrigues</title>
-    <!-- Bootstrap CSS -->
+    <!-- Incluindo Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
-    <link rel="stylesheet" href="css/styles.css">
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <header class="header bg-dark text-light py-3">
-        <div class="container">
-            <nav class="nav justify-content-center">
-                <ul class="nav">
-                    <li class="nav-item"><a class="nav-link text-light" href="../index.html">Home</a></li>
-                    <li class="nav-item"><a class="nav-link text-light" href="sobre.html">Sobre</a></li>
-                    <li class="nav-item"><a class="nav-link text-light" href="projetos.html">Projetos</a></li>
-                    <li class="nav-item"><a class="nav-link text-light" href="daily.html">Daily</a></li>
-                    <li class="nav-item"><a class="nav-link text-light" href="contato.html">Contato</a></li>
-                </ul>
+    <!-- Início do Header -->
+    <header class="bg-primary text-light py-3">
+        <div class="container text-center">
+            <nav class="navbar navbar-expand-lg navbar-dark">
+                <div class="container-fluid">
+                    <a class="navbar-brand" href="#">Nay Rodrigues</a>
+                    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                        <span class="navbar-toggler-icon"></span>
+                    </button>
+                    <div class="collapse navbar-collapse justify-content-center" id="navbarNav">
+                        <ul class="navbar-nav">
+                            <li class="nav-item">
+                                <a class="nav-link" aria-current="page" href="index.html">Home</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link active" href="sobre.html">Sobre</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="projetos.html">Projetos</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="contato.html">Contato</a>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
             </nav>
         </div>
     </header>
-    
-    <section class="about py-5">
+    <!-- Fim do Header -->
+
+    <!-- Início da Seção Sobre -->
+    <section class="bg-secondary text-light text-center py-5">
         <div class="container">
-            <h1 class="text-center mb-4">Sobre</h1>
-            <p class="lead">Meu nome é Nay Rodrigues, sou desenvolvedora full stack com paixão por criar experiências digitais incríveis. Com experiência em design UX/UI e desenvolvimento web, estou comprometida em fornecer soluções que combinam funcionalidade, estética e usabilidade.</p>
-            <p>Minha jornada na tecnologia começou há alguns anos, quando percebi a importância de entender tanto o design quanto o desenvolvimento para criar produtos digitais eficazes. Desde então, tenho trabalhado em diversos projetos que me permitiram crescer e aprender continuamente.</p>
-            <p>Quando não estou codificando, adoro explorar novas tendências de design, aprender sobre novas tecnologias e compartilhar meus conhecimentos com a comunidade.</p>
+            <h1 class="display-4">Sobre Mim</h1>
+            <p class="lead">Meu nome é Nay Rodrigues, sou uma desenvolvedora full stack com uma paixão por criar experiências digitais incríveis. Com experiência em design UX/UI e desenvolvimento web, estou comprometida em fornecer soluções que combinam funcionalidade, estética e usabilidade.</p>
+            <p>Ao longo da minha carreira, trabalhei em uma variedade de projetos que me permitiram aprender e crescer continuamente. Minha jornada no mundo da tecnologia começou com uma curiosidade insaciável e uma vontade de entender como as coisas funcionam. Isso me levou a explorar tanto o design quanto o desenvolvimento, e hoje, esses conhecimentos são a base do meu trabalho.</p>
+            <p>Quando não estou codificando, gosto de explorar novas tendências de design, aprender novas tecnologias e compartilhar meu conhecimento com a comunidade.</p>
         </div>
     </section>
-    
-    <footer class="footer bg-dark text-light py-3">
-        <div class="container text-center">
+    <!-- Fim da Seção Sobre -->
+
+    <!-- Início do Footer -->
+    <footer class="bg-primary text-light py-3 text-center">
+        <div class="container">
             <p>&copy; 2024 Nay Rodrigues - Todos os direitos reservados.</p>
         </div>
     </footer>
+    <!-- Fim do Footer -->
 
-    <!-- Bootstrap JS -->
+    <!-- Incluindo Bootstrap JS -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
