--- a/index.html
+++ b/index.html
@@ -21,16 +21,16 @@
                     <div class="collapse navbar-collapse justify-content-center" id="navbarNav">
                         <ul class="navbar-nav">
                             <li class="nav-item">
-                                <a class="nav-link active" aria-current="page" href="#">Home</a>
+                                <a class="nav-link active" aria-current="page" href="https://nayjoplin.github.io/projeto-final-portfolio-dev/">Home</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="sobre.html">Sobre</a>
+                                <a class="nav-link" href="https://nayjoplin.github.io/projeto-final-portfolio-dev/pages/sobre.html">Sobre</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="projetos.html">Projetos</a>
+                                <a class="nav-link" href="https://nayjoplin.github.io/projeto-final-portfolio-dev/pages/projetos.html">Projetos</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="contato.html">Contato</a>
+                                <a class="nav-link" href="https://nayjoplin.github.io/projeto-final-portfolio-dev/pages/contato.html">Contato</a>
                             </li>
                         </ul>
                     </div>
