--- a/index.html
+++ b/index.html
@@ -27,6 +27,9 @@
                                 <a class="nav-link" href="https://nayjoplin.github.io/projeto-final-portfolio-dev/pages/sobre.html">Sobre</a>
                             </li>
                             <li class="nav-item">
+                                <a class="nav-link" herf="https://nayjoplin.github.io/projeto-final-portfolio-dev/pages/daily.html">Daily</a>
+                            </li>
+                            <li class="nav-item">
                                 <a class="nav-link" href="https://nayjoplin.github.io/projeto-final-portfolio-dev/pages/projetos.html">Projetos</a>
                             </li>
                             <li class="nav-item">
