--- a/index.html
+++ b/index.html
@@ -21,19 +21,19 @@
                     <div class="collapse navbar-collapse justify-content-center" id="navbarNav">
                         <ul class="navbar-nav">
                             <li class="nav-item">
-                                <a class="nav-link active" aria-current="page" href="https://nayjoplin.github.io/projeto-final-portfolio-dev/">Home</a>
+                                <a class="nav-link active" aria-current="page" href="index.html">Home</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="https://nayjoplin.github.io/projeto-final-portfolio-dev/pages/sobre.html">Sobre</a>
+                                <a class="nav-link" href="sobre.html">Sobre</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" herf="https://nayjoplin.github.io/projeto-final-portfolio-dev/pages/daily.html">Daily</a>
+                                <a class="nav-link" href="projetos.html">Projetos</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="https://nayjoplin.github.io/projeto-final-portfolio-dev/pages/projetos.html">Projetos</a>
+                                <a class="nav-link" href="daily.html">Daily</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="https://nayjoplin.github.io/projeto-final-portfolio-dev/pages/contato.html">Contato</a>
+                                <a class="nav-link" href="contato.html">Contato</a>
                             </li>
                         </ul>
                     </div>
@@ -46,7 +46,6 @@
     <!-- Início da Seção de Introdução -->
     <section class="intro bg-secondary text-light text-center py-5">
         <div class="container">
-            <!-- Imagem de perfil (círculo branco) -->
             <div class="profile-image bg-white mx-auto mb-4 rounded-circle"></div>
             <h1 class="name display-4">NAY</h1>
             <h2 class="surname h2">RODRIGUES</h2>
@@ -61,19 +60,16 @@
         <div class="container">
             <h2 class="mb-5">COMO EU POSSO TE AJUDAR</h2>
             <div class="row">
-                <!-- Bloco de Habilidade 1 -->
                 <div class="col-md-4">
                     <div class="skill-icon border rounded-circle mx-auto mb-3"></div>
                     <h3 class="h5">UX/UI Design</h3>
                     <p>Criação de interfaces intuitivas, modernas e atraentes.</p>
                 </div>
-                <!-- Bloco de Habilidade 2 -->
                 <div class="col-md-4">
                     <div class="skill-icon border rounded-circle mx-auto mb-3"></div>
                     <h3 class="h5">Desenvolvimento Web</h3>
                     <p>Desenvolvimento de sites responsivos e funcionais.</p>
                 </div>
-                <!-- Bloco de Habilidade 3 -->
                 <div class="col-md-4">
                     <div class="skill-icon border rounded-circle mx-auto mb-3"></div>
                     <h3 class="h5">SEO</h3>
@@ -111,13 +107,11 @@
     <section class="contact bg-secondary text-light py-5">
         <div class="container">
             <div class="row">
-                <!-- Informação de Contato -->
                 <div class="col-md-6 mb-4">
                     <h2 class="mb-3">MAIS PERTINHO É MAIS GOSTOSO</h2>
                     <p>Se você está com alguma dúvida, podemos bater um papo e eu te explico detalhadamente como posso te ajudar.</p>
                     <a href="#" class="btn btn-primary">Me chama no Whats</a>
                 </div>
-                <!-- Formulário de Contato -->
                 <div class="col-md-6">
                     <h2 class="mb-4">ALÔ, FALA COMIGO</h2>
                     <form>
