--- a/pages/projetos.html
+++ b/pages/projetos.html
@@ -30,6 +30,9 @@
                                 <a class="nav-link active" href="projetos.html">Projetos</a>
                             </li>
                             <li class="nav-item">
+                                <a class="nav-link" href="daily.html">Daily</a>
+                            </li>
+                            <li class="nav-item">
                                 <a class="nav-link" href="contato.html">Contato</a>
                             </li>
                         </ul>
