--- a/pages/sobre.html
+++ b/pages/sobre.html
@@ -21,19 +21,19 @@
                     <div class="collapse navbar-collapse justify-content-center" id="navbarNav">
                         <ul class="navbar-nav">
                             <li class="nav-item">
-                                <a class="nav-link" aria-current="page" href="index.html">Home</a>
+                               <a class="nav-link" href="https://nayjoplin.github.io/projeto-final-portfolio-dev/">Home</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link active" href="sobre.html">Sobre</a>
+                                <a class="nav-link" href="https://nayjoplin.github.io/projeto-final-portfolio-dev/pages/sobre.html">Sobre</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="projetos.html">Projetos</a>
+                                <a class="nav-link" href="https://nayjoplin.github.io/projeto-final-portfolio-dev/pages/projetos.html">Projetos</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="daily.html">Daily</a>
+                                <a class="nav-link" href="https://nayjoplin.github.io/projeto-final-portfolio-dev/pages/daily.html">Daily</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="contato.html">Contato</a>
+                                <a class="nav-link" href="https://nayjoplin.github.io/projeto-final-portfolio-dev/pages/contato.html">Contato</a>
                             </li>
                         </ul>
                     </div>
